[tool.poetry]
name = "Lunara#1881"
version = "0.1.0"
description = "Hey OCR, wanna see me speedrun developing a Discord Bot?"
authors = ["Keiron \"ktrav258\" Travis"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
